update interface insert navigation and gamepad support

--- a/package.json
+++ b/package.json
@@ -44,19 +44,11 @@
     "jquery": "^2.2.0",
     "load-grunt-tasks": "^0.6.0",
     "lodash": "^4.0.0",
-    "mime": "^1.3.4",
     "moment": "^2.11.1",
     "mongoose": "^4.1.0",
     "mongoose-deep-populate": "^2.0.3",
-    "multer": "^1.1.0",
     "node-jsx": "^0.13.3",
-    "notie": "^2.1.0",
-    "react": "^0.14.6",
-    "react-daterange-picker": "git+https://github.com/fluse/react-daterange-picker.git",
-    "react-dom": "^0.14.6",
-    "react-onclickoutside": "^4.5.0",
-    "react-slick": "^0.9.3",
-    "react-sticky": "^3.0.0",
+    "perfect-scrollbar": "^0.6.10",
     "reactify": "^1.1.1",
     "request": "^2.67.0",
     "require-all": "^2.0.0",
